--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ml-auto">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" [routerLink]="['.']" (click)="scrollToId('#shop')">Shop</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" [routerLink]="['cart']">Cart</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" [routerLink]="['cart']">Cart({{itemsInCart}})</a></li>
       </ul>
     </div>
   </div>
