Calculate and display total cost of items in cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -33,6 +33,10 @@
                       <td>{{laptop.totalCost}}</td>
                       <td><a type="button" class="text-danger" (click)="removeItemFromCart(i)">Remove</a></td>
                     </tr>
+                    <tr>
+                      <td colspan="3" class="pt-4"><strong>Total Cost</strong></td>
+                      <td colspan="2" class="pt-4">{{totalCostOfItemsInCart}}</td>
+                    </tr>
                     </tbody>
                   </table>
                 </div>
